--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="container">
       <h2>O mně</h2>
       <p>Jmenuji se Adam Šrek a bydlím ve Velkých Heralticích.</p>
-      <p>Ve volném čase se věnuji fotbalu, parfémům a videohračkám. Fotbal mi přináší radost nejen při sledování zápasů, ale i při hraní s přáteli. Parfémy jsou mojí vášní – rád objevuji nové vůně a zajímám se o složení. Videohry mi zase umožňují relaxovat a ponořit se do fantastických světů.</p>
+      <p>Ve volném čase se věnuji fotbalu, parfémům a videohrám. Fotbal mi přináší radost nejen při sledování zápasů, ale i při hraní s přáteli. Parfémy jsou mojí vášní – rád objevuji nové vůně a zajímám se o složení. Videohry mi zase umožňují relaxovat a ponořit se do fantastických světů.</p>
     </div>
   </section>
 
